Fix spacing issues

--- a/public/styles/_hero.scss
+++ b/public/styles/_hero.scss
@@ -45,7 +45,7 @@
 .behind-hero-image {
   @extend .contact-hero-image;
   background-image: url('../assets/ashi-kesang.jpg');
-  height: 100vh;
+  height: 90vh;
 }
 
 .video_contain {
