--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -85,6 +85,7 @@ a {
 .backer-content {
   @extend .content-wrapper;
   display: none;
+  padding-top: 60px;
 }
 
 .password-form {
